--- a/css/abstracts/_variables.scss
+++ b/css/abstracts/_variables.scss
@@ -4,4 +4,5 @@ $base-font: "Rubik", sans-serif;
 // colors
 $Primary: #363853;
 $secondary: #FF7A50;
-$bgColor: #efefef
+$bgColor: #efefef;
+$mediumDark:#646464;
