--- a/css/style.css
+++ b/css/style.css
@@ -705,6 +705,86 @@ ul {
   margin-right: 10px;
 }
 
+.footer {
+  width: 100%;
+  height: auto;
+  background-color: #efefef;
+  padding-top: 100px;
+}
+.footer .footer__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.footer .footer__container .foot-column {
+  height: 245px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.footer .footer__container .foot-column li {
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  color: black;
+}
+.footer .footer__container .foot-column li a {
+  width: 121px;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 49px;
+  letter-spacing: 0.01em;
+  color: #363853;
+}
+.footer .footer__container .foot-column li:nth-child(1) {
+  margin-bottom: 30px;
+}
+.footer .footer__container .foot-column li i {
+  margin-right: 10px;
+}
+.footer .footer__container .foot-column li:nth-last-child(1) i {
+  color: #363853;
+  margin-right: 30px;
+}
+.footer .copy {
+  width: 100%;
+  height: 75px;
+}
+.footer .copy .copy__container {
+  height: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer .copy .copy__container p {
+  width: 229px;
+  height: 14px;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #646464;
+}
+.footer .copy .copy__container .copy-right-side {
+  width: 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 14px;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #646464;
+}
+
 /*!
  * Font Awesome Free 6.0.0 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
